tests/type-errors/create_contract_arl_with_param_no_param.arl
archetype create_contract_arl_with_param_no_param

import "../passed/simple_param.arl"

entry exec () {
  const delegate : option<key_hash> = none;
  const amount : tez = 0tz;
  const op_addr : (operation * address) = create_contract(simple_param, delegate, amount);
  operations := [op_addr[0]]
}
